Reworked useEffect hooks on titleWrapper + searchBar overhaul visibility, fixed infinite search induced in #9779537

--- a/app/styles/titles-manager/titlesManagerSearchBar.module.css
+++ b/app/styles/titles-manager/titlesManagerSearchBar.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     width: 100%;
     position: fixed;
-    z-index: 65;
+    z-index: 55;
 }
 
 .search-bar-input {
